// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FeedNavigation - Snapshots > matches snapshot with custom feed active (showing edit dialog) 1`] = `
<div
  class="overflow-x-auto lg:flex-row"
  data-testid="container"
>
  <div
    class="mb-2 font-light text-muted-foreground lg:hidden"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feed
  </div>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-border text-muted-foreground"
    data-override-defaults="true"
    data-testid="link"
    href="/home"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-radio size-5 shrink-0"
      data-reach-icon="all"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.247 7.761a6 6 0 0 1 0 8.478"
      />
      <path
        d="M19.075 4.933a10 10 0 0 1 0 14.134"
      />
      <path
        d="M4.925 19.067a10 10 0 0 1 0-14.134"
      />
      <path
        d="M7.753 16.239a6 6 0 0 1 0-8.478"
      />
      <circle
        cx="12"
        cy="12"
        r="2"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      All
    </span>
  </a>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-white text-white"
    data-override-defaults="true"
    data-testid="link"
    href="/feed/feed-active"
  >
    <div
      data-testid="custom-feed-dialog-edit"
    >
      <button
        class="cursor-pointer"
        data-override-defaults="true"
        data-testid="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil size-5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </div>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      Active Feed
    </span>
  </a>
  <div
    data-testid="custom-feed-dialog-create"
  >
    <button
      class="flex min-h-12 w-full min-w-40 cursor-pointer items-center gap-x-2 border-b border-border text-muted-foreground transition-colors hover:text-white lg:justify-center"
      data-override-defaults="true"
      data-testid="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-plus size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M8 12h8"
        />
        <path
          d="M12 8v8"
        />
      </svg>
      <span
        class="font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Create Feed
      </span>
    </button>
  </div>
</div>
`;

exports[`FeedNavigation - Snapshots > matches snapshot with custom feeds and Home active 1`] = `
<div
  class="overflow-x-auto lg:flex-row"
  data-testid="container"
>
  <div
    class="mb-2 font-light text-muted-foreground lg:hidden"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feed
  </div>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-white text-white"
    data-override-defaults="true"
    data-testid="link"
    href="/home"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-radio size-5 shrink-0"
      data-reach-icon="all"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.247 7.761a6 6 0 0 1 0 8.478"
      />
      <path
        d="M19.075 4.933a10 10 0 0 1 0 14.134"
      />
      <path
        d="M4.925 19.067a10 10 0 0 1 0-14.134"
      />
      <path
        d="M7.753 16.239a6 6 0 0 1 0-8.478"
      />
      <circle
        cx="12"
        cy="12"
        r="2"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      All
    </span>
  </a>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-border text-muted-foreground"
    data-override-defaults="true"
    data-testid="link"
    href="/feed/feed-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-pencil size-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
      />
      <path
        d="m15 5 4 4"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      Bitcoin News
    </span>
  </a>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-border text-muted-foreground"
    data-override-defaults="true"
    data-testid="link"
    href="/feed/feed-2"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-pencil size-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
      />
      <path
        d="m15 5 4 4"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      Lightning Network
    </span>
  </a>
  <div
    data-testid="custom-feed-dialog-create"
  >
    <button
      class="flex min-h-12 w-full min-w-40 cursor-pointer items-center gap-x-2 border-b border-border text-muted-foreground transition-colors hover:text-white lg:justify-center"
      data-override-defaults="true"
      data-testid="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-plus size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M8 12h8"
        />
        <path
          d="M12 8v8"
        />
      </svg>
      <span
        class="font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Create Feed
      </span>
    </button>
  </div>
</div>
`;

exports[`FeedNavigation - Snapshots > matches snapshot with multiple custom feeds and one active 1`] = `
<div
  class="overflow-x-auto lg:flex-row"
  data-testid="container"
>
  <div
    class="mb-2 font-light text-muted-foreground lg:hidden"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feed
  </div>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-border text-muted-foreground"
    data-override-defaults="true"
    data-testid="link"
    href="/home"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-radio size-5 shrink-0"
      data-reach-icon="all"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.247 7.761a6 6 0 0 1 0 8.478"
      />
      <path
        d="M19.075 4.933a10 10 0 0 1 0 14.134"
      />
      <path
        d="M4.925 19.067a10 10 0 0 1 0-14.134"
      />
      <path
        d="M7.753 16.239a6 6 0 0 1 0-8.478"
      />
      <circle
        cx="12"
        cy="12"
        r="2"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      All
    </span>
  </a>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-border text-muted-foreground"
    data-override-defaults="true"
    data-testid="link"
    href="/feed/feed-1"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-pencil size-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
      />
      <path
        d="m15 5 4 4"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      Bitcoin
    </span>
  </a>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-white text-white"
    data-override-defaults="true"
    data-testid="link"
    href="/feed/feed-2"
  >
    <div
      data-testid="custom-feed-dialog-edit"
    >
      <button
        class="cursor-pointer"
        data-override-defaults="true"
        data-testid="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil size-5 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
      </button>
    </div>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      Lightning
    </span>
  </a>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-border text-muted-foreground"
    data-override-defaults="true"
    data-testid="link"
    href="/feed/feed-3"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-pencil size-5 shrink-0"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
      />
      <path
        d="m15 5 4 4"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      Nostr
    </span>
  </a>
  <div
    data-testid="custom-feed-dialog-create"
  >
    <button
      class="flex min-h-12 w-full min-w-40 cursor-pointer items-center gap-x-2 border-b border-border text-muted-foreground transition-colors hover:text-white lg:justify-center"
      data-override-defaults="true"
      data-testid="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-plus size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M8 12h8"
        />
        <path
          d="M12 8v8"
        />
      </svg>
      <span
        class="font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Create Feed
      </span>
    </button>
  </div>
</div>
`;

exports[`FeedNavigation - Snapshots > matches snapshot with no custom feeds and Home active 1`] = `
<div
  class="overflow-x-auto lg:flex-row"
  data-testid="container"
>
  <div
    class="mb-2 font-light text-muted-foreground lg:hidden"
    data-level="2"
    data-size="lg"
    data-testid="heading"
  >
    Feed
  </div>
  <a
    class="flex min-h-12 w-full min-w-40 items-center gap-x-2 border-b transition-colors hover:text-white lg:justify-center border-white text-white"
    data-override-defaults="true"
    data-testid="link"
    href="/home"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-radio size-5 shrink-0"
      data-reach-icon="all"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.247 7.761a6 6 0 0 1 0 8.478"
      />
      <path
        d="M19.075 4.933a10 10 0 0 1 0 14.134"
      />
      <path
        d="M4.925 19.067a10 10 0 0 1 0-14.134"
      />
      <path
        d="M7.753 16.239a6 6 0 0 1 0-8.478"
      />
      <circle
        cx="12"
        cy="12"
        r="2"
      />
    </svg>
    <span
      class="font-medium lg:text-sm"
      data-override-defaults="true"
      data-testid="typography"
    >
      All
    </span>
  </a>
  <div
    data-testid="custom-feed-dialog-create"
  >
    <button
      class="flex min-h-12 w-full min-w-40 cursor-pointer items-center gap-x-2 border-b border-border text-muted-foreground transition-colors hover:text-white lg:justify-center"
      data-override-defaults="true"
      data-testid="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-plus size-5 shrink-0"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <path
          d="M8 12h8"
        />
        <path
          d="M12 8v8"
        />
      </svg>
      <span
        class="font-medium lg:text-sm"
        data-override-defaults="true"
        data-testid="typography"
      >
        Create Feed
      </span>
    </button>
  </div>
</div>
`;
